--- a/.eslintrc
+++ b/.eslintrc
@@ -1,14 +1,13 @@
 {
-  "parser": "babel-eslint",
   "env": {
-    "node": true,
-    "browser": true
+    "es6": true,
+    "node": true
   },
   "rules": {
     "quotes": [1, "single", "avoid-escape"],
-    "global-strict": [1, "always"],
-    "no-underscore-dangle": 0,
-    "no-extra-strict": 1,
-    "camelcase": 0
+    "strict": [1, "global"]
+  },
+  "ecmaFeatures": {
+    "modules": true
   }
 }
