--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     }
   ],
   "scripts": {
-    "dev": "jasmine-node spec --coffee --verbose --autoTest --watchFolders lib",
-    "dev:lint": "eslint lib spec",
-    "dev:spec": "jasmine-node spec --coffee --noStackTrace --captureExceptions",
-    "cover": "istanbul cover --root lib --x '**/spec/**' -- jasmine-node --coffee spec",
-    "cover:up": "codecov --file=coverage/lcov.info --disable=gcov -e TRAVIS_NODE_VERSION",
-    "test": "npm run dev:lint && npm run dev:spec --",
-    "server": "json-schema-server spec/fictures --fakeroot"
+    "test": "npm run test:unit --",
+    "test:ci": "npm run coverage:unit && npm run report -- -r lcov",
+    "test:run": "NODE_ENV=test _mocha --exit --recursive --watch-extensions js,json,schema -bR spec",
+    "test:unit": "npm run test:run tests && npm run report -- -r html",
+    "test:server": "bin/json-schema-server tests/fixtures --fakeroot",
+    "coverage": "nyc -x '**/tests/**' -x '**/*.test.js'",
+    "coverage:unit": "npm run coverage -- npm run test:unit",
+    "codecov": "codecov --file=coverage/lcov.info -e TRAVIS_NODE_VERSION",
+    "report": "nyc report",
+    "lint": "eslint lib tests",
+    "pretest": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -43,9 +47,9 @@
     "codecov": "^3.1.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.2.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^5.2.0"
+    "eslint-plugin-import": "^2.14.0",
+    "mocha": "^5.2.0",
+    "nyc": "^13.0.1"
   },
   "dependencies": {
     "chance": "^1.0.16",
