--- a/package.json
+++ b/package.json
@@ -48,16 +48,16 @@
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "mocha": "^5.2.0",
-    "nyc": "^13.0.1"
+    "mocha": "^8.2.1",
+    "nyc": "^15.1.0"
   },
   "dependencies": {
     "chance": "^1.0.16",
     "cli-color": "^1.1.0",
-    "express": "^4.13.4",
     "faker": "^4.1.0",
     "glob": "^7.0.3",
-    "json-schema-faker": "^0.5.0-rc16",
-    "minimist": "^1.2.0"
+    "grown": "^1.1.27",
+    "json-schema-faker": "^0.5.0-rcv.32",
+    "wargs": "^0.9.2"
   }
 }
