--- a/package.json
+++ b/package.json
@@ -52,11 +52,12 @@
     "nyc": "^15.1.0"
   },
   "dependencies": {
+    "@grown/logger": "0.0.12",
     "chance": "^1.0.16",
     "cli-color": "^1.1.0",
     "faker": "^4.1.0",
     "glob": "^7.0.3",
-    "grown": "^1.1.27",
+    "grown": "^1.1.28",
     "json-schema-faker": "^0.5.0-rcv.32",
     "wargs": "^0.9.2"
   }
