--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   ],
   "devDependencies": {
     "chai": "^4.2.0",
-    "codecov": "^3.1.0",
+    "codecov": ">=3.7.1",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
