--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,5 +9,6 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           export CODECOV_TOKEN=${{ secrets.USE_CODECOV_TOKEN }}
+          npm ci
           npm run test:ci
           npm run codecov
