--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: |
           export CODECOV_TOKEN=${{ secrets.USE_CODECOV_TOKEN }}
+          export U_WEBSOCKETS_SKIP=1
           npm ci
           npm run test:ci
           npm run codecov
